@startuml IA04 - Modélisation Championnat de Formule 1


title Projet IA04 - Circuit de Formule 1


class Circuit {
  - id: string
  - name: string
  - country: string
  - MeteoDistribution : []int
  - NbLaps: int

  + Circuit(name, country : string)
  + GenerateMeteo(): Meteo
}

enum Meteo{
  Rainy
  Dry
  Heat
}

abstract class Portion{
  - id : string
  - crashProbability : int
  - tryOvertakeProbability: float64

  + GetType(): PortionType
}


class Turn{

  + Turn(id: string, crashProbability : int, tryOvertakeProbability: float64)
}

class Straight{
  - isDRSZone: bool

  + Straight(id: string, crashProbability : int, tryOvertakeProbability: float64, isDRSZone: bool)
}

Circuit "1..n" --o "*" Championship : intègre >
Circuit "1" *-- "1..n" Portion : contient >
Portion  <|--  Turn
Portion  <|--  Straight
Portion "1" --o "*" Driver : est sur <


@enduml
